# megafon

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose-base.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: admin.py  deps.py  main.py  metrics.py  notify.py  posts.py  user.py
app/core/: avatar.py  config.py  db.py  security.py
app/models/: crud.py  models.py
app/util/: srprint.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: app.css  app.html  messageService.svelte.ts  service-worker.js  sharedState.svelte.ts
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: adminLogin.svelte  createPost.svelte  editPost.svelte  flag.svelte  login.svelte  mentionTextarea.svelte  post.svelte  pullToRefresh.svelte
frontend/src/lib/: avatar.ts  pwaInstall.svelte.ts  theme.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/admin/: +page.svelte
frontend/src/routes/post/[id]/: +page.svelte
frontend/static/: manifest.json  service-worker.js
scripts/: vapid_keys.py
